--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -41,7 +41,7 @@ body, html {
 	margin: auto;
      width: 50%;
      border: 3px solid BLUE;
-     background-color: #b0e0FF;
+     background-color: #b0FFF6;
     padding: 10px;
 }
 
