--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -51,9 +51,9 @@ body, html {
 	background-color: #b0e0e6;
 	text-align: center;
 }
-#SimpleCalculator {background-color: orange;}
-#AgeCalculator {background-color: orange;}
-#EMICalculator {background-color: orange;}
+#SimpleCalculator {background-color: #8080c0;}
+#AgeCalculator {background-color: #8080c0;}
+#EMICalculator {background-color: #8080c0;}
 
 
 
